Fix bug: make 'create new' card stretch depending on height of adjacent cards

--- a/pages/processes/Projects.module.scss
+++ b/pages/processes/Projects.module.scss
@@ -40,12 +40,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  align-self: stretch;
 
   width: 332px;
-  height: 116px;
-
   min-width: 332px;
-  max-height: 116px;
 
   border-radius: 4px;
 
